# mxg

./: .gitignore  CMakeLists.txt  README.md  testing.c
cmake/configs/: build.cmake  compiler.cmake  config.cmake
cmake/configs/libs/: gtest.cmake
cmake/libs/: catch.cmake  fakeit.cmake
examples/: CMakeLists.txt  basic_example.cpp  hello-world.cpp  init_example.cpp
examples/hello-world/: CMakeLists.txt  hello-world.cpp
include/mxg/: Application.hpp  Clock.hpp  Color.hpp  Core.hpp  DefaultState.hpp  Engine.hpp  Exception.hpp  Renderer.hpp  Size.hpp  State.hpp  Texture.hpp  Time.hpp  Transform.hpp  Vector2.hpp  Window.hpp
include/mxg/application/: Application.hpp  DefaultState.hpp  Game.hpp  NullState.hpp  State.hpp  StateApplication.hpp
include/mxg/graphics/: Color.hpp
include/mxg/maps/: Object.hpp  Properties.hpp
include/mxg/maps/objects/: Circle.hpp  Ellipse.hpp  Rectangle.hpp
include/mxg/math/: Circle.hpp  Ellipse.hpp  Rectangle-inl.hpp  Rectangle.hpp  Utils.hpp  Vector2-inl.hpp  Vector2.hpp
include/mxg/sdl/: Renderer.hpp  Texture.hpp  Transform.hpp  Window.hpp
include/mxg/sdl2/: Core.hpp  Engine.hpp  Renderer.hpp  Texture.hpp  Window.hpp
src/: CMakeLists.txt  Config.hpp.in
src/mxg/: Application.cpp  CMakeLists.txt  Clock.cpp  ClockImpl.cpp  ClockImpl.hpp  DefaultState.hpp  Game.cpp  Game.hpp  Size.cpp  Time.cpp  Transform.cpp  Vector2.cpp
src/mxg/app/: Application.cpp  Application.hpp  DefaultState.hpp  Game.cpp  Game.hpp  State.hpp
src/mxg/application/: Application.cpp  Game.cpp  StateApplication.cpp
src/mxg/graphics/: Color.cpp
src/mxg/sdl/: Renderer.cpp  Texture.cpp  TextureLoader.cpp  TextureLoader.hpp  Window.cpp  Window.hpp
src/mxg/sdl2/: CMakeLists.txt  Core.cpp  Engine.cpp  Renderer.cpp  Texture.cpp  Window.cpp
test/: CMakeLists.txt  application_test.cpp  clock_test.cpp  color_test.cpp  game_test.cpp  integration.cpp  maps_test.cpp  math_circle_test.cpp  math_ellipse_test.cpp  math_rectangle_test.cpp  math_vector2_test.cpp  state_application_test.cpp  state_test.cpp  time_test.cpp  transform_test.cpp  vector2_test.cpp
test/sdl/: renderer_test.cpp  texture_test.cpp  window_test.cpp
